# module-7-Gustitreshana

./: README.md
crud-flask/: pyproject.toml
crud-flask/app/: __init__.py
crud-flask/app/connectors/: mysql_connector.py
crud-flask/app/controllers/: product.py  user.py
crud-flask/app/models/: product.py  user.py
crud-flask/app/templates/products/: product_detail.html  product_home.html
crud-flask/app/templates/users/: login.html  register.html
