[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Gustitreshana <gustith2105@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
poetry-dotenv-plugin = "^0.2.0"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
flask-jwt-extended = "^4.6.0"
mysql-connector-python = "^8.3.0"
bcrypt = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
